--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.1.*",
 		"way/generators": "dev-master",
 		"zizaco/confide": "3.1.x",
-		"zizaco/entrust": "dev-master"
+		"zizaco/entrust": "dev-master",
+        "desarrolla2/rss-client":  "dev-master"
 
 	},
 	"autoload": {
