--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+        "psr-4":{
+            "Following\\":"app/Following"
+        }
 	},
 	"scripts": {
 		"post-install-cmd": [
